src/main/java/com/example/sos/common/error/dto/NotImplementedErrorResponse.java
package com.example.sos.common.error.dto;

public class NotImplementedErrorResponse extends BaseErrorResponse {

    public NotImplementedErrorResponse() {
        super(CommonErrorConst.NOT_IMPLEMENTED_ERROR_MESSAGE);
    }
}
